--- a/.github/workflows/github-actions-pre-release.yml
+++ b/.github/workflows/github-actions-pre-release.yml
@@ -12,6 +12,9 @@ jobs:
     runs-on: "ubuntu-latest"
 
     steps:
+      - name: "Minify"
+        run: bash /github/scripts/uglifyjs.sh
+        shell: bash
       # ...
       - name: "Build & test"
         run: |
