--- a/.github/workflows/github-actions-release.yml
+++ b/.github/workflows/github-actions-release.yml
@@ -21,7 +21,7 @@ jobs:
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
           prerelease: false
-          title: "Build ${{ automatic_releases_tag }}"
+          title: ${{ steps.<step-id>.outputs.<output-name> }}
           files: |
             LICENSE.txt
             *.jar
